--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* 1. Global Style.
 2. Typography
 3. Components
@@ -9,8 +10,9 @@
 
 body {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    font-weight: 100;
+    
 }
+
 
 .nav__list {
     list-style: none;
@@ -22,11 +24,35 @@ body {
 
 img {
     width: 100%;
+    height: 100%;
+}
+
+li {
+    list-style: none;
 }
 
 /* 2. TYPOGRAPHY */
 
 /* 3. COMPONENTS */
+
+.news__btn,
+.contact__btn {
+    color: #4EA7FF;
+    background: transparent;
+    border: 2px solid #4EA7FF;
+    border-radius: 3rem;
+    padding: 0.7rem 2rem;
+    margin: 0 1rem 1rem 0;
+    width: 10rem;
+    align-self: flex-end;
+}
+
+.news__btn:hover,
+.contact__btn:hover {
+    background-color: #4EA7FF;
+    color: #fff;
+    transition: 1s ease;
+}
 
 /* 4. HEADER */
 
@@ -41,7 +67,6 @@ img {
 
 .header__nav {
     background-color: rgba(55, 58, 60, .2);
-    min-width: 100%;
 }
 
 .nav__list {
@@ -49,6 +74,8 @@ img {
     flex-flow: column;
     align-items: center;
     padding: 0;
+    
+    
 }
 
 .nav__item {
@@ -84,6 +111,7 @@ nav__link--modifer:link {
 .main-header__text {
     font-size: 1.2em;
     margin: 10px;
+    font-weight: 400;
 }
 
 .main-header__btn {
@@ -108,6 +136,10 @@ nav__link--modifer:link {
     flex-direction: column;
     background-color: #F4F4F4;
 }
+.news__header {
+    font-size: 1.5rem;
+    font-weight: 400;
+}
 
 .news__container {
     display: flex;
@@ -127,20 +159,157 @@ nav__link--modifer:link {
     flex-direction: column;
 }
 
-.news__btn {
-    color: #4EA7FF;
-    background: transparent;
-    border: 2px solid #4EA7FF;
-    border-radius: 3rem;
-    padding: 0.7rem 2rem;
-    align-self: flex-end;
-    margin: 0 1rem 1rem 0;
+
+/* GALLERY */
+
+.gallery {
+    text-align: center;
+    
 }
 
-.news__btn:hover {
-    background-color: #4EA7FF;
-    color: #fff;
-    transition: 1s ease;
+.gallery__header {
+    color: #006699;
+    font-weight: 400;
+
+    
 }
 
-/* 6. FOOTER */
+galler__text {
+    color: #666;
+}
+
+.gallery__list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+}
+
+.gallery__picture {
+    flex: 1 1 50%;
+}
+
+.gallery__picture:hover {
+    /* transform: scale(1.1);  */
+}
+
+/* CONCACT */
+
+.contact-main__header {
+    font-size: 2rem;
+    color: #006699;
+    text-align: center;
+    font-weight: 400;
+}
+
+.contact {
+    background-color: #F4F4F4;
+    padding-top: 1rem;
+}
+
+.contact__form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+.contact__input {
+    flex: 1 1 100%;
+    height: 3rem;
+    margin: 1rem 0.5rem;
+    border: none;
+    text-indent: 1rem;
+}
+.contact__message {
+    height: 10rem;
+}
+
+.contact-text-conteiner {
+    padding-left: 1rem;
+}
+.contact__header {
+    color: #006699;
+}
+.contact__header {
+    font-weight: 400;
+}
+.contact__text {
+    margin: 0;
+    padding-bottom: 0.8rem;
+}
+.footer-copyright {
+    background-color: #F4F4F4;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+
+
+@media all and (min-width: 768px) {
+    .header__nav {
+        width: 100vw;
+    }
+    .nav__list {
+        flex-flow: row;
+        justify-content: space-around;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(55, 58, 60, .2);
+        height: 4rem;
+        margin: 0;
+        padding: 0;
+        
+          
+    }
+
+    .main-header {
+        padding-top: 8rem;
+    }
+    .news__container {
+        flex-direction: row;
+    }
+    .news__item {
+        flex: 0 1 50%;
+        margin-left: 3rem;
+    }
+    .gallery__picture {
+        flex: 0 1 25%;
+    }
+
+    .fullscreen-container {
+        display: flex;
+        flex-direction: row;
+    }
+    .contact {
+        display: flex;
+        padding: 0.5rem 2rem;
+        
+    }
+    .contact__form {
+        flex: 2 1 100%;
+    }
+    .contact-text-conteiner {
+        align-self: center;
+    }
+}
+
+ @media all and (min-width : 1224px) {
+    .header {
+        
+        height: 50rem;
+        
+    }
+    .main-header {
+        padding-top: 15rem;
+        
+    }
+
+    .nav__item:first-child {
+        padding-left: 15rem;
+    }
+    .nav__item:last-child {
+        padding-right: 15rem;
+    }
+} 
