--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 /* 1. GLOBAL STYLE */
 
 .body {
-    font-family: 400, 'Open Sans', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
 .nav__list {
@@ -95,7 +95,6 @@ nav__link--modifer:link {
     display: flex;
     flex-flow: column;
     align-items: center;
-    min-width: 100%;
     padding-top: 0.5em;
 }
 
@@ -135,10 +134,6 @@ nav__link--modifer:link {
     background-color: #F4F4F4;
 }
 
-.news__header {
-    font-size: 1.5rem;
-}
-
 .news__container {
     display: flex;
     flex-direction: column;
@@ -151,6 +146,15 @@ nav__link--modifer:link {
     color: #666;
     display: flex;
     flex-direction: column;
+}
+
+.news__header {
+    font-size: 2rem;
+}
+
+.news__text {
+    font-size: 1.1rem;
+    line-height: 2;
 }
 
 /* 5. GALLERY */
@@ -219,6 +223,14 @@ galler__text {
 
 .contact__text-conteiner {
     padding-left: 1rem !important;
+}
+
+.contact__header {
+    color: #4EA7FF;
+}
+
+.contact-text-conteiner {
+    color: #666;
 }
 
 /* 7. Footer */
